@@ -3,6 +3,7 @@ import logging
 import os
 import shutil
 import sys
+import tempfile
 import unittest
 
 import fiona
@@ -23,3 +24,25 @@ class ReadingTest(unittest.TestCase):
     def test_json(self):
         self.assertEquals(len(self.c), 48)
 
+class WritingTest(unittest.TestCase):
+
+    def setUp(self):
+        self.tempdir = tempfile.mkdtemp()
+
+    def tearDown(self):
+        shutil.rmtree(self.tempdir)
+
+    def test_json(self):
+        path = os.path.join(self.tempdir, 'foo.json')
+        with fiona.open(path, 'w', 
+                driver='GeoJSON', 
+                schema={'geometry': 'Unknown', 'properties': [('title', 'str')]}) as c:
+            c.writerecords([{
+                'geometry': {'type': 'Point', 'coordinates': [0.0, 0.0]},
+                'properties': {'title': 'One'}}])
+            c.writerecords([{
+                'geometry': {'type': 'MultiPoint', 'coordinates': [[0.0, 0.0]]},
+                'properties': {'title': 'Two'}}])
+        with fiona.open(path) as c:
+            self.assertEquals(c.schema['geometry'], 'Unknown')
+            self.assertEquals(len(c), 2)
